--- a/Uplift/Uplift.DataAccess/Uplift.DataAccess.csproj
+++ b/Uplift/Uplift.DataAccess/Uplift.DataAccess.csproj
@@ -9,12 +9,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Data\Initializer\" />
-    <Folder Include="Data\Repository\" />
     <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
